<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/frameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/frameBtn"
        android:theme="@style/BtnStyleMainAct"
        app:layout_constraintBottom_toTopOf="@+id/gridBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/gridBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/gridBtn"
        android:theme="@style/BtnStyleMainAct"
        app:layout_constraintBottom_toTopOf="@+id/linearBtn"
        app:layout_constraintEnd_toEndOf="@+id/frameBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameBtn" />

    <Button
        android:id="@+id/linearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/linearBtn"
        android:theme="@style/BtnStyleMainAct"
        app:layout_constraintBottom_toTopOf="@+id/consBtn"
        app:layout_constraintEnd_toEndOf="@+id/gridBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gridBtn" />

    <Button
        android:id="@+id/consBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/consBtn"
        android:theme="@style/BtnStyleMainAct"
        app:layout_constraintBottom_toTopOf="@+id/relBtn"
        app:layout_constraintEnd_toEndOf="@+id/linearBtn"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/linearBtn" />

    <Button
        android:id="@+id/relBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/relBtn"
        android:theme="@style/BtnStyleMainAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/consBtn"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/consBtn" />
</android.support.constraint.ConstraintLayout>